fixed namespace issue for Client Project

--- a/vvarscNET/vvarscNET.Web.Client/Views/ServerData/Edit.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/ServerData/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConsumeWebAPI.Models.ServerDataModel
+﻿@model vvarscNET.Web.Client.Models.ServerDataModel
 
 @{
     ViewBag.Title = "Edit";
