--- a/vvarscNET/vvarscNET.Web.Client/Views/ServerData/Index.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/ServerData/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ConsumeWebAPI.Models.ServerDataModel>
+﻿@model IEnumerable<vvarscNET.Web.Client.Models.ServerDataModel>
 
 @{
     ViewBag.Title = "Manipulate Server Data";
