fixed issue with password field, and incorrect relative URL for logout

--- a/vvarscNET/vvarscNET.Web.Client/Views/Authentication/Login.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Authentication/Login.cshtml
@@ -28,7 +28,7 @@
                 @Html.LabelFor(model => model.Password)
             </div>
             <div class="label">
-                @Html.EditorFor(model => model.Password)
+                @Html.PasswordFor(model => model.Password)
                 @Html.ValidationMessageFor(model => model.Password)
             </div>
 
