--- a/vvarscNET/vvarscNET.Web.Client/Views/Shared/_LoginPartial.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Shared/_LoginPartial.cshtml
@@ -7,6 +7,6 @@
 else
 {
     <ul>
-        <li>@Session["UserName"]<a href="../Authentication/Logout" target="">Logout</a></li>
+        <li>@Session["UserName"]<a href="../../Authentication/Logout" target="">Logout</a></li>
     </ul>
 }
