starting main website styling

--- a/vvarscNET/vvarscNET.Web.Client/Views/Organizations/Details.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Organizations/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model vvarscNET.Model.Objects.Organization
+﻿@model vvarscNET.Model.Objects.Organizations.Organization
 
 @{
     ViewBag.Title = "Details";
