--- a/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
@@ -6,45 +6,182 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/Styles/Layout.css")
     @Scripts.Render("~/bundles/modernizr")
     <meta name="description" content="Consume Asp.net WebAPI using RestSharp" />
+    <link href='https://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <header>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p class="site-title">@Html.ActionLink("Demo Asp.Net MVC4", "Index", "Home")</p>
-            </div>
-            <div class="float-right">
-                <section id="login">
-                    @Html.Partial("_LoginPartial")
-                </section>
-                <nav>
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <!--<li>@Html.ActionLink("Manipulate Data", "Index", "ServerData")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>-->
-                    </ul>
-                </nav>
+    <div class="fullscreen background parallax" data-img-width="3840" data-img-height="2160" data-diff="100">
+        <div class="content-a" id="parallax__layer--base">
+            <div class="content-b">
+                <div id="MainWrapper">
+                    <header>
+                        <div id="headerInner">
+                            <div class="content-wrapper">
+                                <div class="float-left">
+                                    <p class="site-title">@Html.ActionLink("Demo Asp.Net MVC4", "Index", "Home")</p>
+                                </div>
+                                <div class="float-right">
+                                    <section id="login">
+                                        @Html.Partial("_LoginPartial")
+                                    </section>
+                                    <nav>
+                                        <ul id="menu">
+                                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                                            <!--<li>@Html.ActionLink("Manipulate Data", "Index", "ServerData")</li>
+                                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>-->
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                        </div>
+                    </header>
+                    <div id="body">
+                        <div class="two-line-separator">
+                        </div>
+                        <div id="mainWebsiteInner">
+                            <div id="CONTENT">
+                                <div id="contentInner">
+                                    @RenderSection("featured", required: false)
+                                    <section class="content-wrapper main-content clear-fix">
+                                        @RenderBody()
+                                    </section>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <footer id="FOOTER">
+                    <div class="two-line-separator">
+                    </div>
+                    <div id="footerInner">
+                        <div class="content-wrapper">
+                            <div class="float-left">
+                                <p>&copy; @DateTime.Now.Year - Demo Asp.Net MVC4</p>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
             </div>
         </div>
-    </header>
-    <div id="body">
-        @RenderSection("featured", required: false)
-        <section class="content-wrapper main-content clear-fix">
-            @RenderBody()
-        </section>
     </div>
-    <footer>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - Demo Asp.Net MVC4</p>
-            </div>
-        </div>
-    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
+<!--Script to make parallax backgrounds full-height-->
+<script>
+/* detect touch */
+if("ontouchstart" in window){
+    document.documentElement.className = document.documentElement.className + " touch";
+}
+if(!$("html").hasClass("touch")){
+    /* background fix */
+    $(".parallax").css("background-attachment", "fixed");
+}
+
+/* fix vertical when not overflow call fullscreenFix() if .fullscreen content changes */
+function fullscreenFix(){
+    var h = $('body').height();
+	var h2 = $(".content-b").innerHeight();
+
+    /* set .fullscreen height */
+	if(h2 > h)
+	{
+		$(".fullscreen").addClass('overflow');
+	}
+
+	/*
+    $('.content-b').each(function(i){
+        if($(this).innerHeight() > h)
+		{
+			$(this).closest('.fullscreen').addClass("overflow");
+        }
+    });
+	*/
+}
+$(window).resize(fullscreenFix);
+fullscreenFix();
+
+/* resize background images */
+function backgroundResize(){
+    var windowH = $(window).height();
+    $(".background").each(function(i){
+        var path = $(this);
+        /* variables */
+        var contW = path.width();
+        var contH = path.height();
+        var imgW = path.attr("data-img-width");
+        var imgH = path.attr("data-img-height");
+        var ratio = imgW / imgH;
+        /* overflowing difference */
+        var diff = parseFloat(path.attr("data-diff"));
+        diff = diff ? diff : 0;
+        /* remaining height to have fullscreen image only on parallax */
+        var remainingH = 0;
+        if(path.hasClass("parallax") && !$("html").hasClass("touch")){
+            var maxH = contH > windowH ? contH : windowH;
+            remainingH = windowH - contH;
+        }
+        /* set img values depending on cont */
+        imgH = contH + remainingH + diff;
+        imgW = imgH * ratio;
+        /* fix when too large */
+        if(contW > imgW){
+            imgW = contW;
+            imgH = imgW / ratio;
+        }
+
+        path.data("resized-imgW", imgW);
+        path.data("resized-imgH", imgH);
+        path.css("background-size", imgW + "px " + imgH + "px");
+    });
+}
+$(window).resize(backgroundResize);
+$(window).focus(backgroundResize);
+backgroundResize();
+
+/* set parallax background-position */
+function parallaxPosition(e){
+    var heightWindow = $(window).height();
+    var topWindow = $(window).scrollTop();
+    var bottomWindow = topWindow + heightWindow;
+    var currentWindow = (topWindow + bottomWindow) / 2;
+    $(".parallax").each(function(i){
+        var path = $(this);
+        var height = path.height();
+        var top = path.offset().top;
+        var bottom = top + height;
+        /* only when in range */
+        if(bottomWindow > top && topWindow < bottom){
+            var imgW = path.data("resized-imgW");
+            var imgH = path.data("resized-imgH");
+            /* min when image touch top of window */
+            var min = 0;
+            /* max when image touch bottom of window */
+            var max = - imgH + heightWindow;
+            /* overflow changes parallax */
+            var overflowH = height < heightWindow ? imgH - height : imgH - heightWindow;
+			/* fix height on overflow */
+            top = top - overflowH;
+            bottom = bottom + overflowH;
+            /* value with linear interpolation */
+            var value = min + (max - min) * (currentWindow - top) / (bottom - top);
+            /* set background-position */
+            var orizontalPosition = path.attr("data-oriz-pos");
+            orizontalPosition = orizontalPosition ? orizontalPosition : "50%";
+            $(this).css("background-position", orizontalPosition + " " + value + "px");
+        }
+    });
+}
+if(!$("html").hasClass("touch")){
+    $(window).resize(parallaxPosition);
+    $(window).scroll(parallaxPosition);
+    parallaxPosition();
+}
+</script>
