--- a/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Styles/Layout.css")
+    @Styles.Render("~/Content/Styles/Shared.css")
+    @Styles.Render("~/Content/Styles/Accents.css")
     @Scripts.Render("~/bundles/modernizr")
     <meta name="description" content="Consume Asp.net WebAPI using RestSharp" />
     <link href='https://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
