--- a/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     @Styles.Render("~/Content/Styles/Shared.css")
     @Styles.Render("~/Content/Styles/Accents.css")
     @Scripts.Render("~/bundles/modernizr")
-    <meta name="description" content="Consume Asp.net WebAPI using RestSharp" />
+    <meta name="description" content="VVarMachine StarCitizen Fleet" />
     <link href='https://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 </head>
@@ -62,7 +62,7 @@
                     <div id="footerInner">
                         <div class="content-wrapper">
                             <div class="float-left">
-                                <p>&copy; @DateTime.Now.Year - Demo Asp.Net MVC4</p>
+                                <p>&copy; @DateTime.Now.Year - vvarmachine.com</p>
                             </div>
                         </div>
                     </div>
