--- a/vvarscNET/vvarscNET.Web.Client/Views/Wiki/Ranks.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Wiki/Ranks.cshtml
@@ -114,7 +114,7 @@
                                             </div>
                                             <div class="corner corner-bottom-right">
                                             </div>
-                                            <img class="rankImage" align="middle" alt="@pgr.PayGradeName @pgr.RankType" src="@pgr.RankImage" />
+                                            <img class="rankImagelarge" align="middle" alt="@pgr.PayGradeName @pgr.RankType" src="@pgr.RankImage" />
                                         </div>
                                     </div>
                                 }
