--- a/vvarscNET/vvarscNET.Web.Client/Content/Styles/Shared.css
+++ b/vvarscNET/vvarscNET.Web.Client/Content/Styles/Shared.css
@@ -69,9 +69,118 @@
     background-color: rgba(2, 6, 14, 0.7);
     border: 1px solid #222;
     transition: all 0.4s ease 0s;
-
+    background-image: url(http://sc.vvarmachine.com/images/fading-bars.png);
 }
 
-.rankImage {
+.rankImageLarge {
+    height: 60px;
+    width: 60px;
+    display: table-cell;
+    vertical-align: middle;
+}
 
+.rankImageSmall {
+    height: 16px;
+    width: 16px;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.rankImage_text {
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 10pt;
+    color: #DDD;
+    text-shadow: 0px 0px 8px #00A0B6;
+    white-space: nowrap;
+    padding-left: 4px;
+}
+
+.adminButton {
+    display: inline;
+    color: #DDD;
+    font-family: Orbitron;
+    font-variant: all-small-caps;
+    font-weight: normal;
+    background: rgba(0,0,0,0.0);
+    cursor: pointer;
+    margin-left: 4px;
+    margin-right: 4px;
+    font-size: 10pt;
+    border: none;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    vertical-align: middle;
+    text-align: center;
+    padding: 0px;
+}
+
+.adminButtonCreate {
+    margin-left: 5%;
+    border-color: rgba(0, 100, 0, 0.75);
+}
+
+.adminButtonImage {
+    vertical-align: middle;
+    opacity: 0.4;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+}
+
+.adminButtonEdit, .adminButtonPlayerShips, .adminButtonAssignLeader, .adminButtonEditRank {
+    border-color: RGBA(185, 145, 0, 0.75);
+}
+
+.adminButtonDelete {
+    border-color: RGBA(240, 0, 0, 0.75);
+}
+
+.adminButton:hover {
+    text-shadow: 0px 0px 8px #FFF;
+    color: #EEE;
+}
+
+.adminButton:hover .adminButtonImage {
+    opacity: 1;
+}
+
+.dialogButtonCancel {
+    border-color: RGBA(240, 0, 0, 0.75) !important;
+}
+
+.dialogButtonSubmit {
+    border-color: rgba(0, 100, 0, 0.75) !important;
+}
+
+.adminDialogButtonPane {
+    padding-left: 4px;
+    margin-top: 8px;
+}
+
+.adminDialogButton {
+    display: inline;
+    color: #DDD;
+    font-family: Orbitron;
+    font-variant: all-small-caps;
+    font-weight: normal;
+    font-size: 10pt;
+    background: rgba(0,0,0,0.9);
+    cursor: pointer;
+    border: 1px solid #787878;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    padding: 4px;
+    text-decoration: none;
+    vertical-align: middle;
+    margin: 0px;
+}
+
+.adminDialogButton:hover {
+    text-shadow: 0px 0px 8px #FFF;
+    color: #EEE;
 }
