--- a/vvarscNET/vvarscNET.Web.Client/Content/Styles/Shared.css
+++ b/vvarscNET/vvarscNET.Web.Client/Content/Styles/Shared.css
@@ -1,9 +1,6 @@
 ﻿.description_container {
     height: 100%;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding: 16px,24px,16px,24px;
     border-top: 1px solid rgba(0, 153, 170, 0.9);
     border-bottom: 1px solid rgba(0, 153, 170, 0.9);
     background-color: rgba(0, 0, 0, 0.65);
@@ -14,10 +11,7 @@
 
 .description_container2 {
     height: 100%;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 6px;
-    padding-right: 6px;
+    padding: 8px,6px,8px,6px;
     border-top: 1px solid rgba(0,153,170,0.9);
     border-bottom: 1px solid rgba(0,153,170,0.9);
     background-color: rgba(0,0,0,0.65);
@@ -100,7 +94,7 @@
     display: inline;
     color: #DDD;
     font-family: Orbitron;
-    font-variant: all-small-caps;
+    font-variant: small-caps;
     font-weight: normal;
     background: rgba(0,0,0,0.0);
     cursor: pointer;
@@ -164,7 +158,7 @@
     display: inline;
     color: #DDD;
     font-family: Orbitron;
-    font-variant: all-small-caps;
+    font-variant: small-caps;
     font-weight: normal;
     font-size: 10pt;
     background: rgba(0,0,0,0.9);
@@ -177,7 +171,6 @@
     padding: 4px;
     text-decoration: none;
     vertical-align: middle;
-    margin: 0px;
 }
 
 .adminDialogButton:hover {
