edit member in client functioning

--- a/vvarscNET/vvarscNET.Web.Client/Content/Site.css
+++ b/vvarscNET/vvarscNET.Web.Client/Content/Site.css
@@ -138,8 +138,7 @@ select {
 }
 
 .main-content {
-    padding-left: 10px;
-    padding-top: 30px;
+    padding: 0;
 }
 
 .featured + .main-content {
