--- a/vvarscNET/vvarscNET.Web.Client/Views/Admin/CreateMember.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Admin/CreateMember.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = "Create Member";
 }
 
+@Html.ActionLink("<-- Back to Member List", "OrganizationMembers", "Admin", new { id = Model.OrganizationID }, null)
+<br />
+<br />
 <h2>Add New Member</h2>
 
 <article>
