--- a/vvarscNET/vvarscNET.Web.Client/Views/Admin/EditMember.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Admin/EditMember.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit Member";
 }
 
-@Html.ActionLink("⇠Back to Member List", "OrganizationMembers", "Admin", new { id = Model.OrganizationID }, new { @style="text-decoration:none;"})
+@Html.ActionLink("⇠Back to Member List", "OrgMembers", "Admin", new { id = Model.OrganizationID }, new { @style="text-decoration:none;"})
 <br />
 <br />
 <h2>Update Member</h2>
@@ -94,7 +94,8 @@
 
             <br />
             <div class="adminDialogButtonPane">
-                <input type="submit" value="Update" class="adminDialogButton dialogButtonSubmit" />  @Html.ActionLink("Cancel", "OrganizationMembers", "Admin", new { id = Model.OrganizationID }, new { @class = "adminDialogButton dialogButtonCancel" })
+                <input type="submit" value="Update" class="adminDialogButton dialogButtonSubmit" />
+                @Html.ActionLink("Cancel", "OrgMembers", "Admin", new { id = Model.OrganizationID }, new { @class = "adminDialogButton dialogButtonCancel" })
             </div>
         </fieldset>
     }
