--- a/vvarscNET/vvarscNET.Web.Client/Content/Site.css
+++ b/vvarscNET/vvarscNET.Web.Client/Content/Site.css
@@ -26,6 +26,7 @@ a {
     font-weight: bold;
     display: inline-block;
     vertical-align: middle;
+    text-decoration: none;
 }
 
 a:link, a:visited,
@@ -125,6 +126,16 @@ select {
     margin-bottom: 4px;
 }
 
+select[multiple], select[size]{
+    height:auto;
+}
+
+button, select {
+    text-transform: none;
+    background-color: rgba(0,0,0,0.7);
+    border: 1px solid rgb(31,72,88);
+    color: #DDD;
+}
 
 /* main layout
 ----------------------------------------------------------*/
@@ -349,6 +360,7 @@ aside {
 
 .label {
     font-weight: 700;
+    text-align: left;
 }
 
 /* login page */
