--- a/vvarscNET/vvarscNET.Web.Client/Views/Admin/OrgRoles.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Admin/OrgRoles.cshtml
@@ -1,21 +1,25 @@
-﻿@model List<vvarscNET.Model.Objects.People.Member>
+﻿@model IEnumerable<vvarscNET.Model.Objects.Organizations.OrgRole>
+
 @{
-    ViewBag.Title = "Members";
+    ViewBag.Title = "Organization Roles";
 }
 
-<h2>Member Management</h2>
+@Html.ActionLink("⇠Back to Admin Home", "Index", "Admin", new { organizationID = Session["OrganizationID"] }, new { @style = "text-decoration:none;" })
+<br />
+<br />
+<h2>Role Management</h2>
 
 <div>
-    <button id="adminCreateMember" class="adminButton adminButtonCreate" title="Add New Member" style="
+    <button id="adminCreateRole" class="adminButton adminButtonCreate" title="Add New Member" style="
 		margin-left: 0px;
 		margin-bottom: 4px;
 		width: 100%;
 		text-align: right;"
-        onclick="location.href='@Url.Action("CreateMember","Admin",new { organizationID = Session["OrganizationID"] })'">
+            onclick="location.href='@Url.Action("CreateRole","Admin",new { organizationID = Session["OrganizationID"] })'">
         <img height="20px" class="adminButtonImage" src="http://sc.vvarmachine.com/images/misc/button_add.png" />
-        Add New Member
+        Add New Role
     </button>
-    <div id="AdminMemberList" class="description_container">
+    <div id="AdminRoleList" class="description_container">
         <div class="top-line">
         </div>
         <div class="corner4 corner-diag-blue-topLeft">
@@ -32,8 +36,8 @@
             padding-bottom: 4px;
         ">
             @{
-                var sortedList = Model.OrderBy(a => a.UserName);
-                foreach (var member in sortedList)
+                var sortedList = Model.OrderBy(a => a.RoleOrderBy);
+                foreach (var role in sortedList)
                 {
                     <div class="table_header_block">
                     </div>
@@ -46,23 +50,15 @@
                             float: right;
                             text-align: right;
                         ">
-                            <button class="adminButton adminButtonEdit" title="Edit Member" style="margin-right: 0px;"
-                                    onclick="location.href='@Url.Action("EditMember","Admin",new { memberID = @member.ID })'">
-                                <img height="20px" class="adminButtonImage" src="http://sc.vvarmachine.com/images/misc/button_edit.png">
+                            <button class="adminButton adminButtonEdit" title="Edit Role" style="margin-right: 0px;"
+                                    onclick="location.href='@Url.Action("EditOrgRole","Admin",new { roleID = @role.ID })'">
+                                <img style="height:20px;" class="adminButtonImage" src="http://sc.vvarmachine.com/images/misc/button_edit.png">
                             </button>
                         </div>
                         <div style="display:table;">
-                            <div class="image_wrapper">
-                                <div class="image_container" style="
-                                    height: 20px;
-                                    width: 20px;
-                                    padding-left: 0px;
-                                    padding-right: 0px;
-                                ">
-                                    <img class="rankImageSmall" src="@member.RankImage" />
-                                </div>
+                            <div class="image_wrapper" style="height:24px;">
                                 <div class="rankImage_text">
-                                    @member.RankAbbr <strong>@member.UserName</strong>
+                                    @Html.ActionLink("[" + @role.RoleOrderBy + "] " + @role.RoleName, "EditOrgRole", "Admin", new { roleID = @role.ID }, null)
                                 </div>
                             </div>
                         </div>
