--- a/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
+++ b/vvarscNET/vvarscNET.Web.Client/Views/Shared/_Layout.cshtml
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - Demo :: Consume Asp.net WebAPI using RestSharp</title>
+    <title>@ViewBag.Title - VVAR SC Fleet</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
     <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Styles.Render("~/Content/Styles/Layout.css")
@@ -191,4 +192,19 @@ if(!$("html").hasClass("touch")){
     $(window).scroll(parallaxPosition);
     parallaxPosition();
 }
+</script>
+
+
+@Styles.Render("~/Content/bootstrap-min.css")
+@Styles.Render("~/Content/bootstrap-multiselect.css")
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script src="http://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    $(function () {
+        $('.listbox').multiselect({
+            includeSelectAllOption: true
+        });
+    });
 </script>
